--- a/src/components/auth.css
+++ b/src/components/auth.css
@@ -5,11 +5,12 @@
     align-items: center;
     height: 100vh;
 }
-.authHeader {
+.authTitle {
     font-size: 2rem;
     font-weight: 700;
 }
-.authLink {
-    font-size: 1.2rem;
-    color: #5cb85c;
+
+form.ant-form {
+    width: 20%;
+    margin-top: 16px;
 }
